# CMake-Tutorial

./: CMake实战一：单个源文件.md  CMake实战三：自定义编译选项.md  CMake实战二：多个源文件，同一或多个目录.md  CMake实战四：安装测试和添加环境生成安装包.md  README.md
build-type/: CMakeLists.txt  main.cpp
compile-flags/: CMakeLists.txt  main.cpp
demo1/: CMakeLists.txt  main.cpp
demo2/: CMakeLists.txt  main.cpp
demo3/: CMakeLists.txt  main.cpp
demo4/: CMakeLists.txt  main.cpp
demo4/math/: myMath.cpp
demo5/: CMakeLists.txt  main.cpp
demo6/: CMakeLists.txt  config.h.in  main.cpp
demo6/math/: CMakeLists.txt  myMath.cpp
demo7/: CMakeLists.txt  config.h.in  main.cpp
demo7/math/: myMath.cpp
demo8/: CMakeLists.txt  config.h  main.cpp
hello-headers/: CMakeLists.txt
share-library/: CMakeLists.txt
share-library/src/: hello.cpp
static-library/: CMakeLists.txt
static-library/include/: hello.h
static-library/src/: main.cpp
third-party-lib/: CMakeLists.txt  main.cpp
